# c-rust-program-pairs

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yaml
.github/workflows/: rust.yml
metadata/: README.md  metadata.schema.json  metadata_schema.rs  program-pairs.md
metadata/demo/: diffutils.json
metadata/individual/: big-software.json  system-tools.json
metadata/project/: coreutils.json  findutils.json  procps.json  util-linux.json
progress-reports/: aug-5-2025.md
src/: cli.rs  corpus.rs  lib.rs  main.rs  metadata.rs  parser.rs  paths.rs
src/corpus/: delete.rs  downloader.rs  errors.rs  parser.rs  schema.rs  utils.rs
src/corpus/utils/: files.rs  repositories.rs
src/metadata/: parser.rs
src/parser/: canonical.rs  individual.rs  map.rs  metadata_schema.rs  project.rs  schema.rs  validator.rs
