[package]
name = "c-rust-program-pairs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
fs_extra = "1.3.0"
git2 = "0.20.2"
indicatif = "0.18.0"
jsonschema = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
typify = "0.4.2"

[build-dependencies]
prettyplease = "0.2"
schemars = "0.8"
serde_json = "1.0"
syn = "2.0"
typify = "0.4.2"

[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"
unescaped_backticks = "warn"
